--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+      <button id="dark-mode-toggle" class="dark-toggle-btn">
+    🌙
+</button>
 
     </div>
   </header>
